# doc-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_llm.py  pyproject.toml  sitecustomize.py
scripts/: local_test.py
src/docparser/: __init__.py  config.py  main.py
src/docparser/api/: main.py
src/docparser/api/middleware/: error_handler 2.py
src/docparser/api/routes/: __init__.py  documents 2.py  documents.py  exports.py  health.py
src/docparser/core/: __init__.py  models.py  pipeline.py
src/docparser/exporters/: __init__.py  base.py  csv_exporter.py  en16931_exporter.py  excel_exporter.py  ubl_exporter.py
src/docparser/extractors/: __init__.py  base.py  excel.py  here.code-workspace  ocr.py  pdf.py  xml.py
src/docparser/normalizers/: __init__.py  llm_extractor.py
src/docparser/normalizers/prompts/: __init__ 2.py  __init__.py  extraction 2.py  extraction.py  validation.py
src/docparser/utils/: __init__.py  file_handlers.py
src/docparser/validators/: __init__.py  math_validator.py  tax_validator.py
tests/: __init__.py  conftest.py
tests/test_exporters/: test_csv_exporter.py
tests/test_validators/: test_math_validator.py
